--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainColor">#CB2020</color>
+    <color name="mainColorDark">#BF2020</color>
+    <color name="textColor1">#FFFFFF</color>
+    <color name="textColor2">#636363</color>
 </resources>
